welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: '=' expected but identifier found.
def pove(nbPas:Int,versLAvant:Boolean):={
                                      ^Program:10: error: illegal start of simple expression
}
^